feature/project-management-routes
* create and link task and project entities

* create all routes and services for projects and tasks

* minor fixes

* add swagger adapter

* fix circular dependency

* remove swagger adapter (it sucks)

* sync the swagger and the actual controllers
